Added space skybox, improved character controller script, added a plant pot model (for no reason yet...).
Now trying to get the arm's models to work

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,6 @@ fmod_editor.log
 *FMODStudioCache.asset.meta
 Assets/Plugins/FMOD/Cache/
 Assets/Plugins/FMOD/Cache.meta
+
+*.blend1
+*.blend1.meta
